--- a/src/index.html
+++ b/src/index.html
@@ -27,7 +27,32 @@
 
     <header class="section-outer section-header">
       <div class="section-inner section-inner--wide">
-        header
+        <div class="main-navigation">
+          <a href="#" class="logo"></a>
+          <nav class="nav">
+            <ul class="nav-wrapper">
+              <li class="nav-wrapper__item">
+                <a href="#" class="nav-wrapper__item-link nav-wrapper__item-link--active">Home</a>
+                <a href="#" class="nav-wrapper__item-link">Blog</a>
+                <a href="#" class="nav-wrapper__item-link">Features</a>
+                <a href="#" class="nav-wrapper__item-link">Pricing</a>
+                <a href="#" class="nav-wrapper__item-link">Documentation</a>
+              </li>
+            </ul>
+          </nav>
+          <div class="socials">
+            <ul class="nav-wrapper">
+              <li class="nav-wrapper__item">
+                <a href="#" class="nav-wrapper__item-link nav-wrapper__item-link--active">Home</a>
+                <a href="#" class="nav-wrapper__item-link">Blog</a>
+                <a href="#" class="nav-wrapper__item-link">Features</a>
+                <a href="#" class="nav-wrapper__item-link">Pricing</a>
+                <a href="#" class="nav-wrapper__item-link">Documentation</a>
+              </li>
+            </ul>
+          </div>
+          <div class="btn"></div>
+        </div>
       </div>
     </header>
 
