--- a/src/index.html
+++ b/src/index.html
@@ -81,7 +81,17 @@
       <ul class="slider-hero-image">
         <li class="slider-hero-image__item">
           <div class="section-inner slider-hero-image__item-content">
-            asd
+            <h5>Plan your life</h5>
+            <h2>Increase your <span>productivity</span></h2>
+            <div class="text">
+              Brute laoreet efficiendi id his, ea illum nonumes luptatum pro. Usu atqui laudem an, insolens gubergren similique est cu. Et vel modus congue vituperata.
+            </div>
+            <div class="btn">
+              <a href="#">
+                <i class="icon-play"></i>
+              </a>
+            </div>
+
           </div>
         </li>
       </ul>
